syntax = "proto3";

package entities.v1;

// Owner: feature/reactions-system
// Dependencies: entities.v1.Post from posts feature

import "google/protobuf/timestamp.proto";

// === ENTITY DEFINITIONS START ===
// Add entity messages below this line

message Reaction {
  // Reaction fields will be defined by reactions-system feature
  string id = 1;
  string post_id = 2;
  string user_id = 3;
  string session_id = 4;
  string reaction_type = 5; // "like", "love", "wow", "haha", "sad", "angry"
  google.protobuf.Timestamp created_at = 6;
}

message ReactionSummary {
  string reaction_type = 1;
  int32 count = 2;
  int32 verified_count = 3;
  int32 anonymous_count = 4;
}

message ReactionActivity {
  string action = 1; // "added", "removed", "changed"
  string reaction_type = 2;
  string previous_type = 3;
  string actor_name = 4;
  bool is_verified = 5;
  google.protobuf.Timestamp created_at = 6;
}

// === ENTITY DEFINITIONS END ===